@@ -290,13 +290,13 @@ public class SparseGridPortrayal2D extends FieldPortrayal2D
             {
             public Object getLocation()
                 {
-                w.update();
+                //w.update();
                 return w;
                 }
                 
             public String getLocationName()
                 {
-                w.update();
+                //w.update();
                 return w.toString();
                 }
             };
