@@ -18,43 +18,41 @@ public class StableDouble2D implements StableLocation
         
     public String toString()
         {
+		update();
         if (!exists) return "Gone";
         else return "(" + x + ", " + y + ")"; 
         }
-    
-    protected StableDouble2D() { }
     
     public StableDouble2D(Continuous2D field, Object object)
         {
         this.field = field;
         this.object = object;
-        update();
         }
-        
-    public void update()
+	
+	void update()
         {
         Double2D pos = null;
         if (field != null) pos = field.getObjectLocation(object);
         if (pos == null) { exists = false; }  // purposely don't update x and y so they stay the same
         else { x = pos.x; y = pos.y; exists = true; }
         }
-            
-    public double getX() { return x; }
-    public double getY() { return y; }
-    public boolean getExists() { return exists; }  // what an ugly name
+
+    public double getX() { update(); return x; }
+    public double getY() { update(); return y; }
+    public boolean getExists() { update(); return exists; }  // what an ugly name
             
     public void setX(double val)
         {
-        x = val;
-        exists = true;
-        if (field!=null) field.setObjectLocation(object, new Double2D(x,y));
+        if (field!=null) field.setObjectLocation(object, new Double2D(val,getY()));
+		x = val;
+		exists = true;
         }
 
     public void setY(double val)
         {
-        y = val;
-        exists = true;
-        if (field!=null) field.setObjectLocation(object, new Double2D(x,y));
+        if (field!=null) field.setObjectLocation(object, new Double2D(getX(),val));
+		y = val;
+		exists = true;
         }
 
 // playing with too much fire
