@@ -15,5 +15,4 @@ package sim.portrayal.inspector;
 public interface StableLocation
     {
     public String toString();
-    public void update();
     }
