@@ -7,6 +7,7 @@
 package sim.portrayal.network;
 import sim.portrayal.*;
 import java.awt.geom.*;
+import java.awt.*;
 
 /**
    An extension of DrawInfo2D for dealing with edges in visualizing network fields.
@@ -23,6 +24,24 @@ public class EdgeDrawInfo2D extends DrawInfo2D
         this.secondPoint = secondPoint;
         }
         
+    public EdgeDrawInfo2D(Rectangle draw, Rectangle clip, Point2D.Double secondPoint)
+        {
+        super(draw,clip);
+        this.secondPoint = secondPoint;
+        }
+        
+    public EdgeDrawInfo2D(RectangularShape draw, RectangularShape clip, Point2D.Double secondPoint)
+        {
+        super(draw,clip);
+        this.secondPoint = secondPoint;
+        }
+
+    public EdgeDrawInfo2D(DrawInfo2D other, double translateX, double translateY, Point2D.Double secondPoint)
+        {
+        super(other, translateX,translateY);
+        this.secondPoint = secondPoint;
+        }
+
     public EdgeDrawInfo2D(DrawInfo2D other, Point2D.Double secondPoint)
         {
         super(other);
@@ -31,13 +50,12 @@ public class EdgeDrawInfo2D extends DrawInfo2D
 
     public EdgeDrawInfo2D(EdgeDrawInfo2D other)
         {
-        super(other);
-        this.secondPoint = new Point2D.Double(secondPoint.x, secondPoint.y);
+		this(other, new Point2D.Double(other.secondPoint.x, other.secondPoint.y));
         }        
 
 
     public String toString() 
         {
-        return "EdgeDrawInfo2D[ Draw: " + draw + " Clip: " + clip + " 2nd: " + secondPoint + "]";
+        return "EdgeDrawInfo2D[ Draw: " + draw + " Clip: " + clip +  " Precise: " + precise + " Location : " + location + " 2nd: " + secondPoint + "]";
         }
     }
