@@ -39,13 +39,24 @@ public class SpatialNetwork2D
             throw new RuntimeException("Null Network.");
         }
     
-    public void setAuxillaryField( final SparseField2D f)
+    public void setAuxiliaryField( final SparseField2D f)
         {
         field2 = f;
-        if (field2 != null && field instanceof SparseGrid2D)
+        if (field2 != null && field instanceof SparseField2D)
             throw new RuntimeException("The auxillary field of a SpatialNetwork2D should be the same type as the primary field.");
         }
+		
+	/**
+		@deprecated, misspelled name!  Use setAuxiliaryField instead.
+	*/
+    public void setAuxillaryField( final SparseField2D f)
+        {
+		setAuxiliaryField(f);
+        }
 
+	/**
+		@deprecated
+	*/
     public Double2D getObjectLocation(Object node)
         {
         Double2D loc= field.getObjectLocationAsDouble2D(node);
@@ -55,16 +66,4 @@ public class SpatialNetwork2D
         }
 
     public Double2D getDimensions() { return field.getDimensions(); }
-
-    /** @deprecated use getDimensions() instead */
-    public double getWidth()
-        {
-        return getDimensions().x;
-        }
-        
-    /** @deprecated use getDimensions() instead */
-    public double getHeight()
-        {
-        return getDimensions().y;
-        }
     }
